# bevy_consumable_event

./: Cargo.toml
src/: app.rs
