[package]
edition = "2021"
name = "bevy_consumable_event"
version = "0.3.0"

description = "A crate to add events to Bevy that can be consumed."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/andriyDev/bevy_consumable_event"

categories = ["game-development"]
keywords = ["bevy", "consume", "event"]

[dependencies]
bevy_app = { git = "https://github.com/bevyengine/bevy.git", optional = true }
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git", default-features = false }

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", default-features = false }

[features]
default = ["bevy_app"]
